--- a/elme/en.lproj/MainStoryboard.storyboard
+++ b/elme/en.lproj/MainStoryboard.storyboard
@@ -134,7 +134,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="us5-Zt-bhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="C98-km-agY" customClass="EditIncidentViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="R6H-kh-11q">
+                    <view key="view" contentMode="scaleToFill" id="R6H-kh-11q" customClass="UIControl">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -170,9 +170,11 @@
                                 <rect key="frame" x="20" y="243" width="280" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="C98-km-agY" id="oPo-O4-EQ9"/>
+                                </connections>
                             </textView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Beschreibung" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="98F-LM-rr8">
                                 <rect key="frame" x="20" y="214" width="106" height="21"/>
@@ -221,7 +223,13 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <connections>
+                            <action selector="backgroundTapped:" destination="C98-km-agY" eventType="touchUpInside" id="as7-tt-LTx"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="descriptionTextField" destination="q8s-DI-t8Q" id="bqc-zj-GRp"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="902" y="639"/>
@@ -305,8 +313,10 @@
         <class className="EditIncidentViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EditIncidentViewController.h"/>
             <relationships>
+                <relationship kind="action" name="backgroundTapped:"/>
                 <relationship kind="action" name="cancel:"/>
                 <relationship kind="action" name="save:"/>
+                <relationship kind="outlet" name="descriptionTextField" candidateClass="UITextView"/>
             </relationships>
         </class>
         <class className="IncidentViewController" superclassName="CouchTableViewController">
