--- a/elme/en.lproj/MainStoryboard.storyboard
+++ b/elme/en.lproj/MainStoryboard.storyboard
@@ -84,7 +84,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="n0b-kj-cFh"/>
                                     <barButtonItem systemItem="add" id="cD2-rT-tvX">
                                         <connections>
-                                            <segue destination="C98-km-agY" kind="modal" identifier="NewIncident" id="ABX-VX-tDa"/>
+                                            <segue destination="uLm-35-stE" kind="modal" id="bGQ-cC-vux"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="8NF-Ch-ryZ"/>
@@ -135,11 +135,11 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="us5-Zt-bhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="C98-km-agY" customClass="EditIncidentViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R6H-kh-11q" customClass="UIControl">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="wnV-2K-KLj">
-                                <rect key="frame" x="0.0" y="416" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="372" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem systemItem="cancel" id="h0o-nz-pLs">
@@ -155,19 +155,12 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <navigationBar contentMode="scaleToFill" id="piu-yI-ajW">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Neuer Vorfall" id="lhX-J2-Tc5"/>
-                                </items>
-                            </navigationBar>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="Gvx-0u-WDR">
-                                <rect key="frame" x="0.0" y="44" width="160" height="160"/>
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="116"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="q8s-DI-t8Q">
-                                <rect key="frame" x="20" y="243" width="280" height="75"/>
+                                <rect key="frame" x="20" y="153" width="280" height="75"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -177,14 +170,14 @@
                                 </connections>
                             </textView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Beschreibung" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="98F-LM-rr8">
-                                <rect key="frame" x="20" y="214" width="106" height="21"/>
+                                <rect key="frame" x="20" y="124" width="106" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="eV7-Cb-GCy">
-                                <rect key="frame" x="20" y="326" width="280" height="37"/>
+                                <rect key="frame" x="20" y="236" width="280" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Bilder">
@@ -194,9 +187,12 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Tzy-Cr-jbH" kind="push" id="Pop-Pi-H5z"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="x6V-rp-Nyd">
-                                <rect key="frame" x="20" y="371" width="280" height="37"/>
+                                <rect key="frame" x="20" y="281" width="280" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Audionotizen">
@@ -208,14 +204,14 @@
                                 </state>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Projekt A" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="Vff-c0-awf">
-                                <rect key="frame" x="168" y="52" width="132" height="21"/>
+                                <rect key="frame" x="168" y="8" width="132" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="04.03.2011 12:23" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="Ofg-RQ-yL0">
-                                <rect key="frame" x="168" y="77" width="132" height="21"/>
+                                <rect key="frame" x="168" y="33" width="132" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -227,6 +223,7 @@
                             <action selector="backgroundTapped:" destination="C98-km-agY" eventType="touchUpInside" id="as7-tt-LTx"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="FZ4-LX-Dh3"/>
                     <connections>
                         <outlet property="createdAtLabel" destination="Ofg-RQ-yL0" id="nYy-qK-xLi"/>
                         <outlet property="descriptionTextField" destination="q8s-DI-t8Q" id="bqc-zj-GRp"/>
@@ -234,6 +231,36 @@
                         <outlet property="projectLabel" destination="Vff-c0-awf" id="nNj-4y-rP6"/>
                     </connections>
                 </viewController>
+            </objects>
+            <point key="canvasLocation" x="1370" y="639"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="a3i-tM-i58">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NUQ-QL-rWJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Tzy-Cr-jbH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Pf-nM-c6Y">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Lah-CG-4Va"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1835" y="639"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="emB-cy-WDw">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bhY-dL-vSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="uLm-35-stE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="5eB-zl-veK">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="C98-km-agY" kind="relationship" relationship="rootViewController" id="2su-8G-Xyv"/>
+                    </connections>
+                </navigationController>
             </objects>
             <point key="canvasLocation" x="902" y="639"/>
         </scene>
@@ -299,6 +326,42 @@
             <point key="canvasLocation" x="902" y="64"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="CouchTableViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CouchTableViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="DetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="EditIncidentViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditIncidentViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backgroundTapped:"/>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="save:"/>
+                <relationship kind="outlet" name="createdAtLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="descriptionTextField" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="projectLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="IncidentViewController" superclassName="CouchTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IncidentViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="insertNewObject:"/>
+            </relationships>
+        </class>
+        <class className="MasterViewController" superclassName="CouchTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
